day21 and day22 activities

--- a/day13/registration-page2.html
+++ b/day13/registration-page2.html
@@ -17,8 +17,8 @@
                 </tr>
                 <tr>
                     <td>Gender</td>
-                    <td><input type="radio" name="g" value="M">Male</td>
-                    <td><input type="radio" name="g" value="F">Female</td>
+                    <td><input type="radio" name="g" value="M">Male
+                    <input type="radio" name="g" value="F">Female</td>
                 </tr>
                 <tr>
                     <td>Date of Birth</td>
@@ -26,9 +26,9 @@
                 </tr>
                 <tr>
                     <td>Courses</td>
-                    <td><input type="checkbox" name="courses" value="html">HTML</td>
-                    <td><input type="checkbox" name="courses" value="CSS">CSS</td>
-                    <td><input type="checkbox" name="courses" value="js">Javascript</td>
+                    <td><input type="checkbox" name="courses" value="html">HTML
+                    <input type="checkbox" name="courses" value="CSS">CSS
+                    <input type="checkbox" name="courses" value="js">Javascript</td>
                 </tr>
                 <tr>
                     <td>Qualification</td>
@@ -47,8 +47,8 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Address</td>
-                    <td><textarea name="adrss"></textarea></td>
+                    <td style="vertical-align: top;">Address</td>
+                    <td><textarea name="adrss" cols="40" rows="6"></textarea></td>
                 </tr>
                 <tr>
                     <td>Upload Pic</td>
@@ -56,7 +56,7 @@
                 </tr>
                 <tr>
                     <td><input type="submit" value="Submit"></td>
-                    <td><input type="reset" value="Clear"></td>
+                    <td style="text-align: right;"><input type="reset" value="Clear"></td>
                 </tr>
             </tbody>
         </table>
