--- a/day14/website.html
+++ b/day14/website.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-    <header style="border-radius: 25px ; height: 90px; background-color: brown;">
-        <h1 style="text-align: center; vertical-align: middle;">My Website</h1>
+
+    <header style="border-radius: 25px ; background-color: brown; text-align: center;">
+        <h1>My Website</h1>
     </header>
-    </div>
+
     <br>
     <nav>
         <a href="home.html" target="_blank">Home</a> | 
